# griptape-nodes-sql

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
griptape_nodes_sql/: base_sql_node.py  get_table_schema.py  griptape_nodes_library.json  insert_rows.py  read_table.py  select_from_table.py
