[project]
name = "griptape_nodes_sql"
version = "0.1.0"
description = "Custom GripTape Nodes for interacting with a SQL database"
authors = [
    {name = "Allen Rose",email = "RoseAllenM@gmail.com"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
